WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268732
pictureInPicture in iOS does not work for camera streams
https://bugs.webkit.org/show_bug.cgi?id=268732
Summary
pictureInPicture in iOS does not work for camera streams
youenn fablet
Reported
2024-02-05 00:19:55 PST
pictureInPicture in iOS does not work for camera streams
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-05 00:20:09 PST
<
rdar://problem/122295706
>
youenn fablet
Comment 2
2024-03-12 07:20:43 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/25775
EWS
Comment 3
2024-03-12 11:02:51 PDT
Committed
275988@main
(bc85b0e51049): <
https://commits.webkit.org/275988@main
> Reviewed commits have been landed. Closing PR #25775 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug