pictureInPicture in iOS does not work for camera streams https://bugs.webkit.org/show_bug.cgi?id=268732 rdar://122295706

Reviewed by Eric Carlson.

In the past entering pip window mode for local camera would end up showing nothing as camera would get muted if the app goes in background.
With [AVCaptureSession initWithMediaEnvironment:], this restriction is no longer true.
We can thus enable pip window for local cameras.

Manually tested.

* Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaStreamAVFObjC.h:
* Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaStreamAVFObjC.mm:
(WebCore::MediaPlayerPrivateMediaStreamAVFObjC::supportsPictureInPicture const): Deleted.

Canonical link: https://commits.webkit.org/275988@main